<resources>
    <string name="app_name">Technician App</string>

    <string name="login">Sign In</string>
    <string name="my_account">My Account</string>
    <string name="account_setting_panel">Account Settings Panel</string>
    <string name="sign_out">Logout</string>
    <string name="history">History</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_picture">Upload Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_main3">Technician</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Profile-->
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>

    <string name="nic">Nic #:</string>
    <string name="address">Address:</string>
    <string name="area">Area:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="category">Cateogry:</string>
    <string name="attended_complaints">Attended Complains:</string>
    <string name="total_earned">Total Revenue Earned:</string>

    <!--contact-->
    <string name="complain_number">Complaint #:</string>
    <string name="sttus">Status:</string>
    <string name="remarks">Remarks:</string>
    <string name="remarks_hint">Enter your remarks</string>

    <!--service visit update-->
    <string name="model">Model:</string>
    <string name="serial">Serial #:</string>
    <string name="brand">Brand</string>
    <string name="item_cateogry">Item Category:</string>
    <string name="payment_recieved">Payment Recieved:</string>
    <string name="payment_recieved_hint">Enter payment recieved</string>
    <string name="submit">Submit</string>

    <array name="item_cateogry_list">
        <item>Refrigerator</item>
        <item>AC</item>
    </array>
    <string name="title_activity_login">@string/app_name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_message">Please fill following fields</string>
</resources>
