<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eureka.technicianapp.ServiceVisitUpdate">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_centerVertical="true"
        android:shrinkColumns="*"
        android:id="@+id/table"
        >
        <TableRow
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                style="@style/textViewStyle"
                android:layout_column="0"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_styles"
                android:layout_column="1"
                android:text="E6550" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial"
                style="@style/textViewStyle"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_styles"
                android:text="11Ab2332" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                style="@style/textViewStyle"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/et_styles"
                android:text="xyz" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_cateogry"
                style="@style/textViewStyle"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sp_style"
                android:id="@+id/sp_item_category" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sttus"
                style="@style/textViewStyle"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/sp_style"
                android:id="@+id/sp_status" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                style="@style/textViewStyle"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="120dp"
                style="@style/textViewStyle"
                android:minLines="5"
                android:padding="5dp"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:scrollbars="vertical"
                android:background="@drawable/et_search"
                android:hint="@string/remarks_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_recieved"
                style="@style/textViewStyle"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="120dp"
                style="@style/textViewStyle"
                android:background="@drawable/et_search"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:scrollbars="vertical"
                android:padding="5dp"
                android:hint="@string/payment_recieved_hint"
                android:id="@+id/editText" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:layout_margin="10dp"
        android:layout_below="@+id/table"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" />
</RelativeLayout>
</ScrollView>
