
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eureka.technicianapp.Profile">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivUserProfile"
        android:src="@drawable/profilepicicon"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Image"
            android:layout_below="@+id/ivUserProfile"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="10dp"

        >
        <TableRow
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/name"
              style="@style/textViewStyle"
              android:layout_column="0"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
                android:layout_column="1"
              android:text="Rehman" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/email"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="rehman@gmail.com" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/email"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="rehman@gmail.com" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/address"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="DHA Phase II" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/nic"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="44304-20123212-3" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                style="@style/textViewStyle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewStyle"
                android:text="Karachi" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/area"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="Mallir" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/category"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="xyz" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/attended_complaints"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="xyz" />
        </TableRow>
        <TableRow>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/total_earned"
              style="@style/textViewStyle"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                style="@style/textViewStyle"
              android:text="Rs 20,000" />
        </TableRow>
    </TableLayout>
    </HorizontalScrollView>
</LinearLayout>
</ScrollView>
</RelativeLayout>