
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eureka.technicianapp.Contact"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_gravity="center">-->
            <!--<include layout="@layout/form_field_message" />-->
        <!--</LinearLayout>-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true"

            android:id="@+id/table"
            >
            <TableRow
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complain_number"
                    style="@style/textViewStyle"
                    android:layout_column="0"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_styles"
                    android:layout_column="1"
                    android:enabled="false"
                    android:hint="1232"
                    android:id="@+id/editText3" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sttus"
                    android:layout_column="0"
                    style="@style/textViewStyle"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_status"
                    style="@style/sp_style"
                    android:layout_column="1"

                    />
            </TableRow>


             </TableLayout>

        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            style="@style/textViewStyle"
            android:gravity="top"
            android:layout_below="@+id/table"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:id="@+id/remarks"
            android:hint="@string/remarks_hint"
            android:background="@drawable/et_search"
            android:minLines="5"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/remarks"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
</ScrollView>
</RelativeLayout>
